# Knowledge-sharing

./: .gitignore  README.md  main.py  pyproject.toml
db/: DynamoDB.md  Introduction to Neo4j.md  SELECT * FROM TABLE.md
db/B-Tree Indexes PostgreSQL/: B-Tree Indexes PostgreSQL.md  B-Tree [OTDATED].md
db/BASE vs ACID/: BASE vs ACID.md
db/CAP theorem/: CAP theorem.md
db/Data Lake and Data Warehouse/: Comparison.md  Data Lakehouse.md  Data Marts.md  Data Vault.md
db/Database speed improvement/: Indexes.md  README.md  docker-compose.yml  main.py  queries.sql  requirements.txt
db/ElasticSeachCourse/: ElasticSearch Opening.md  Mappings and Analysis.md
db/Interesting tasks I solved using SQL/: Knowledge sharing Interesting task solved using SQL.html  Knowledge sharing Interesting task solved using SQL.zpln
db/Introduction to BigQuery/: Introduction to BigQuery.md
db/Meilisearch Overview/: .env.exmaple  README.md  docker-compose.yaml
db/Neo4j vs PostgreSQL vs Apache Age for queries of depth > 3/: README.md  requirements.txt
db/Vector, full-text and hybrid search/: Vector, full-text and hybrid search.ipynb
db/Views in Postgres/: README.md  Views in Postgres.md  generate_data.py
db/cdc/: CDC.md  console.sql  docker-compose.yml
db/cdc/python/: Dockerfile  app.py  pyproject.toml
networks/: WebRTC.md  go.mod  go.sum  index.html  server.go  server_ws_conn.go  streaming.go
networks/sender/: screen_recorder.go  sender_with_optimization.go
other/: Home server set-up.md  📚 Швидкочитання.md
other/Apache Kafka/: Consumer.md  Ecosystem.md  Event or message.md  Message  Guarantees.md  Producer.md  Replicas.md  Topic.md  What is Kafka.md
other/Apache Spark/: Logical and physical plans.md  Wide and narrow tranformations.md  Zeppelin notebook.html  Zeppelin notebook.zpln
other/Big data file types/: BSON.md  JSON.md  Parquet.md  README.md
other/Create images using Stable Diffusion/: Create images using Stable Diffusion.md
other/Data Lake and Data Warehouse/: Architecture examples and use cases.md  Data Lake.md  Data Warehouse (DWh).md  OLAP and OLTP.md
programming/: AoS vs SoA.md  Cellular Automate.md  Monolith architecture, YAGNI, distributed monolith.md  Writing Firefox extension for ChatGPT.md
programming/Zig/python-with-zig/: build.zig  hello.zig  pydust.build.zig  pyproject.toml
programming/poetry_vs_uv/p_uv/: main.py  pyproject.toml
tools/: Mermaid.md
(+279 files in other folders)
